# moving_average

./: Cargo.toml  README.md
src/: main.rs
